# wiztree_diff_gui

./: README.md
src/: diff.css  diff.html  diff.js  diff.ts  index.html  main.js  main.ts  progressbar.css  progressbar.js  progressbar.ts  styles.css  toast.css  toast.js  toast.ts  tsconfig.json  utils.js  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
