[package]
name = "wiztree_diff_gui"
version = "0.1.0"
description = "GUI for wiztree_diff"
authors = ["azazo1"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wiztree_diff_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"

[dependencies.wiztree_diff]
git = "https://github.com/azazo1/wiztree_diff.git"
rev = "8bee86de86f7b96aa6a111c880a0996625adeace"
